Pruebas de Unidad
Primeras priebas para detrinar la aceptacion de modificaciones

--- a/Mejoras/Spanish.ini
+++ b/Mejoras/Spanish.ini
@@ -6,14 +6,14 @@ SING_NAVIGATION_CREATE=Crear
 
 # Legend
 SING_LEGEND_SELECT=Seleccionar
-SING_LEGEND_NAVIGATE=desplazarse
-SING_LEGEND_ESC=dorso
-SING_CONTINUE=continuar
-SING_HELP=ayuda
+SING_LEGEND_NAVIGATE=Desplazarse
+SING_LEGEND_ESC=Salir
+SING_CONTINUE=Continuar
+SING_HELP=Ayuda!
 
 # Loading screen
 SING_LOADING=Cargando...
-SING_LOADING_GAME_ENGINE=Cargando motor del juego
+SING_LOADING_GAME_ENGINE=Cargando Motor de Juego
 SING_LOADING_LOADED=Cargado
 SING_LOADING_SONGS=Canciones
 SING_LOADING_LOADED_SONGLIST=Cargado lista de canciones
