--- a/Mejoras/Spanish.ini
+++ b/Mejoras/Spanish.ini
@@ -1,7 +1,7 @@
 
 [Text]
 # Navigation
-SING_NAVIGATION_BACK=Atras
+SING_NAVIGATION_BACK=Atrás
 SING_NAVIGATION_CREATE=Crear
 
 # Legend
@@ -14,10 +14,10 @@ SING_HELP=Ayuda!
 # Loading screen
 SING_LOADING=Cargando...
 SING_LOADING_GAME_ENGINE=Cargando Motor de Juego
-SING_LOADING_LOADED=Cargado
+SING_LOADING_LOADED=Ya Cargó
 SING_LOADING_SONGS=Canciones
 SING_LOADING_LOADED_SONGLIST=Cargado lista de canciones
-SING_LOADING_LOADING_COVERS=Cargando cubre
+SING_LOADING_LOADING_COVERS=~Cargando Entorno de Juego~
 
 # Profiles screen
 SING_PROFILE_MODE=seleccione el perfil
@@ -76,7 +76,7 @@ SING_PROFILE_PASSWORD_PASSWORD=Contraseña:
 SING_PROFILE_PASSWORD_LOG_IN=Acceder
 
 # Logging screen
-SING_NETWORK_OFFLINE_MODE=Cargando modo fuera de línea
+SING_NETWORK_OFFLINE_MODE=Cargando...
 SING_NETWORK_CONNECTING=Conexión
 SING_NETWORK_LOGIN_FAILED=Error de acceso
 SING_NETWORK_DOWNLOADING_SONGLIST=Descarga de lista de canciones
@@ -155,8 +155,8 @@ SING_BUYSONGS_TITLE_DESC=Descargar canciones gratis y de pago
 # Popup
 SING_POPUP_TITLE_INFORMATION=Información
 SING_POPUP_TITLE_QUESTION=Pregunta
-SING_POPUP_EXIT_TITLE=Salir de la confirmación
-SING_POPUP_EXIT_TEXT=Salir del juego??
+SING_POPUP_EXIT_TITLE=¿Que Deseas Hacer?
+SING_POPUP_EXIT_TEXT=¿Quiero Salir del Juego?
 SING_POPUP_RESTART_TEXT=Para realizar cambios, debe reiniciar el juego. Reinicie?
 SING_POPUP_BUY_SONG_TEXT_1=¿Desea comprar esta canción para los
 SING_POPUP_BUY_SONG_MONTH_TEXT_1=¿Desea comprar para el mes de esta canción para
