--- a/Mejoras/Spanish.ini
+++ b/Mejoras/Spanish.ini
@@ -20,8 +20,8 @@ SING_LOADING_LOADED_SONGLIST=Cargado lista de canciones
 SING_LOADING_LOADING_COVERS=Cargando Entorno de Juego
 
 # Profiles screen
-SING_PROFILE_MODE=Seleccione el Perfil
-SING_PROFILE_DESC=Seleccionar su Perfil
+SING_PROFILE_MODE=Selección de Perfil
+SING_PROFILE_DESC=Selecciona tu Perfil
 SING_PROFILE_CREATE_NEW=Crear un Nuevo
 SING_PROFILE_OFFLINE_MODE=Estas en Modo Rápido
 SING_PROFILE_SELECT_PROFILE=Seleccione el Perfil
@@ -87,7 +87,7 @@ SING_NETWORK_STARTING_GAME=A partir del juego
 
 # Main screen
 SING_SING=Cantar
-SING_SING_DESC=juego rapido: Cantar Solo o Varios
+SING_SING_DESC=Juego Rápido para Cantar Solo o Entre Varios
 SING_MAIN_JUKEBOX=JukeBox
 SING_MAIN_JUKEBOX_DESC=Escuchar Canciones en Modo TocaDiscos
 SING_EDITOR=Editor
@@ -105,7 +105,7 @@ SING_MAIN_UPDATE_1=
 SING_MAIN_UPDATE_2=
 
 # Internet connection
-SING_MAIN_OFFLINE=
+SING_MAIN_OFFLINE= Es Hora de Cantar!
 SING_MAIN_NO_CONNECTION=No hay conexión a Internet
 
 # Shop
@@ -195,24 +195,24 @@ SING_MODE_PARTY=Fiesta!
 SING_MODE_TOURNAMENT=Torneo
 
 # Microphone count screen
-SING_MICROPHONE_COUNT_MODE=micrófono cuenta
-SING_MICROPHONE_COUNT_DESC=seleccionar micrófono cuenta
-SING_MICROPHONE_COUNT_CONTINUE=seleccione cuenta
+SING_MICROPHONE_COUNT_MODE=¿Cuántos Micrófonos?
+SING_MICROPHONE_COUNT_DESC=Seleccionar la Cantidad de Micrófonos
+SING_MICROPHONE_COUNT_CONTINUE=Seleccione Cantidad
 
 # Player count screen
-SING_PLAYER_COUNT_MODE=número de jugadores
-SING_PLAYER_COUNT_DESC=seleccionar el jugador número
-SING_PLAYER_COUNT_CONTINUE=seleccione cuenta
+SING_PLAYER_COUNT_MODE=Número de Jugadores
+SING_PLAYER_COUNT_DESC=Seleccionar el Jugador Número
+SING_PLAYER_COUNT_CONTINUE=Seleccione Cantidad
 
 # Players screen
-SING_ENTER_PLAYER_NAME=Introduce Todos los Nombres de los Jugadores
+SING_ENTER_PLAYER_NAME=Introduce el Nombre de los Jugadores
 SING_PROFILE_CHANGE_PLAYER=Cambiar de Jugador
 SING_PROFILE_CHANGE_PROFILE=Cambiar de Perfil
 SING_PROFILE_CHANGE_NAME=Cambiar el Nombre
-SING_PROFILE_CREATE=Ccrear un Perfil
+SING_PROFILE_CREATE=Crear un Perfil
 SING_PROFILE_REMOVE=Eliminar el Perfil
-SING_PROFILE_REMOVE_CONFIRM=presione enter para confirmar el perfil de la eliminación
-SING_PROFILE_SELECT_DUPLICATED=que haya seleccionado al menos dos perfiles similares
+SING_PROFILE_REMOVE_CONFIRM=Para Eliminar Presiones Enter para La Confirmación
+SING_PROFILE_SELECT_DUPLICATED=¡No Puedes Seleccionar dos Perfiles Iguales!
 
 # Difficulty screen
 SING_DIFFICULTY=Dificultad
@@ -229,12 +229,12 @@ SING_NOW_PLAYING_ROUND=ronda
 
 # Songs screen
 SING_SONGS=canciones
-SING_SONG_SELECTION_SORTING=clasificación
-SING_SONG_SELECTION_FILTER=filtro
-SING_SONG_SELECTION_MENU=menú
-SING_SONG_SELECTION_PROFILE=cambiar los perfiles
-SING_SONG_SELECTION_FREEPLAY=freeplay
-SING_SONG_NO_SONG_FOUND=encontrado ninguna canción
+SING_SONG_SELECTION_SORTING=Clasificación
+SING_SONG_SELECTION_FILTER=Búsqueda
+SING_SONG_SELECTION_MENU=Menú
+SING_SONG_SELECTION_PROFILE=Cambiar los Perfiles
+SING_SONG_SELECTION_FREEPLAY=Freeplay
+SING_SONG_NO_SONG_FOUND=Encontrado Ninguna Canción
 
 # Songs language
 SING_SONG_LANGUAGE_CZECH=Checo
@@ -248,7 +248,7 @@ SING_SONG_LANGUAGE_HINDI=Hindi
 SING_SONG_LANGUAGE_KOREAN=Coreano
 SING_SONG_LANGUAGE_POLISH=Polaco
 SING_SONG_LANGUAGE_RUSSIAN=Ruso
-SING_SONG_LANGUAGE_SPANISH=Castellano
+SING_SONG_LANGUAGE_SPANISH=Español Latino
 SING_SONG_LANGUAGE_SWEDISH=Sueco
 SING_SONG_LANGUAGE_UKRAINIAN=Ucranio
 SING_SONG_LANGUAGE_UNKNOWN=Desconocido
@@ -269,7 +269,7 @@ SING_SONG_MENU_DOWNLOAD=Descargar
 SING_SONG_MENU_DOWNLOADING=Descarga...
 SING_SONG_MENU_DOWNLOADED=Descargado
 SING_SONG_MENU_BUY=Comprar
-SING_SONG_MENU_PREVIEW=Vista previa
+SING_SONG_MENU_PREVIEW=Vista Previa
 SING_SONG_MENU_PREVIEW_STOP=Detener
 SING_SONG_MENU_PREVIEW_PLAYING=Jugando...
 
@@ -305,18 +305,18 @@ SING_JUKEBOX_MENU_PLAY=jugar
 SING_TIME=TIEMPO
 
 # Sing scores
-POPUP_PERFECT=!perfecto!
-POPUP_AWESOME=!genial!
-POPUP_GREAT=!estupendo!
-POPUP_GOOD=!bien!
-POPUP_NOTBAD=!regular!
-POPUP_BAD=!mal!
-POPUP_POOR=!pobre!
-POPUP_AWFUL=!pésimo!
+POPUP_PERFECT=!Perfecto!
+POPUP_AWESOME=!Genial!
+POPUP_GREAT=!Estupendo!
+POPUP_GOOD=!Bien!
+POPUP_NOTBAD=!Regular!
+POPUP_BAD=!Mal!
+POPUP_POOR=!Pobre!
+POPUP_AWFUL=!Pésimo!
 
 # Sing menu
-SING_POPUP_PAUSED_TITLE=pausa
-SING_POPUP_PAUSED_DESC=Juego en pausa
+SING_POPUP_PAUSED_TITLE=Pausa
+SING_POPUP_PAUSED_DESC=Juego en Pausa
 SING_POPUP_PAUSED_CONTINUE=Continuar
 SING_POPUP_PAUSED_RESTART=Reiniciar
 SING_POPUP_PAUSED_FINISH=Terminar
@@ -329,25 +329,25 @@ SING_RATING_BACKING_SINGER=Promesa
 SING_RATING_RISING=Creciente estrella
 SING_RATING_LEAD_SINGER=Cantante
 SING_RATING_HIT_ARTIST=Gran Cantante
-SING_RATING_SUPERSTAR=SúperStar
-SING_RATING_ULTRASTAR=UltraStar
+SING_RATING_SUPERSTAR=Super Estrella
+SING_RATING_ULTRASTAR=Ultra Estrella
 
-SING_TOTAL=total
+SING_TOTAL=Total
 SING_SONG_SELECTION=Selección de Canción
 SING_SONG_SELECTION_1=Selección
 SING_SONG_SELECTION_2=de Canción
 SING_CHOOSE_SONG=Elige una Canción
-SING_SING_MODE=Cantar Solo
+SING_SING_MODE=Cantar en Competencia
 
 # Score screen
-SING_SCORE=puntuación de la Canción
-SING_NOTES=notas
-SING_GOLDEN_NOTES=notas doradas
-SING_PHRASE_BONUS=bonus de línea
+SING_SCORE=Puntuación de la Canción
+SING_NOTES=Notas
+SING_GOLDEN_NOTES=Notas Doradas
+SING_PHRASE_BONUS=Bonus de Línea
 
 # Top 5 screen
 SING_EXIT=Salir
-SING_TOP_5_CHARTS=Lista de los 5 Mejores
+SING_TOP_5_CHARTS=TOP 5 Mejores Cantantes
 
 # Options Screen
 SING_OPTIONS=Opciones
